package Constants;

public enum Departments {
  CSE,
  ME,
  ETC,
  EE,
  CE
}
