package tech.vedantchimote.springboot;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringbootBackendApplication {

	public static void main(String[] args) throws Exception {
    SpringApplication.run(SpringbootBackendApplication.class, args);
  }

}
