package tech.vedantchimote.springboot.exception;

import org.springframework.boot.SpringApplication;
import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(value = HttpStatus.BAD_GATEWAY)
public class PraciticeException extends Exception {

  private static final long serialVersionUID = 1L;

  PraciticeException(String message) {
    super(message);
  }

}
